# ArisuTalk

./: .gitignore  .simple-git-hooks.mjs  AGENTS.md  CLAUDE.MD  CONTRIBUTING.ko.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  TODO.md  biome.jsonc  context7.json  docker-compose.yml  language_key_analysis.md  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project_general.md
backend/: .gitignore  .simple-git-hooks.mjs  AGENTS.md  README.md  biome.jsonc  build.gradle.kts  libs.versions.toml  package.json  pyproject.toml  settings.gradle.kts  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
backend/app/: build.gradle.kts
backend/docs/: auth.md
backend/src/: environmentTypes.ts  main.py  main.ts  platform.ts  schema.ts  types.ts  vite-env.d.ts
backend/src/adapters/: StorageClientBase.ts  client.ts  oracle-nosql.ts  s3-storage.ts
backend/src/jvmMain/kotlin/moe/arisutalk/: App.kt
backend/src/jvmMain/resources/: logback.xml
backend/src/lib/: auth.ts  cors.ts
backend/src/routes/: blob.ts  data.ts
backend/src/versions/: __init__.py
backend/src/versions/v1/: phonebook.py
backend/src/versions/v1/auth/: firebase.py  identity.py
backend/src/versions/v1/declare/: character.py  user.py
backend/src/versions/v1/persistence/: user.py
backend/src/versions/v1/persistence/primal/: mongo.py
backend/tests/: FirebaseFirestore.integration.test.ts  FirebaseFirestore.test.ts  test_declare_models.py
backend/tests/routes/: blob.test.ts  data.test.ts
backend/tools/: auth.html
backend/utils/: openapi_spec.py
(+667 files in other folders)
